--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Debug step - cek apakah secrets terbaca
+      - name: Debug secrets
+        run: |
+          echo "Username: ${{ secrets.DOCKERHUB_USERNAME }}"
+          echo "Token length: $(echo "${{ secrets.DOCKERHUB_TOKEN }}" | wc -c)"
+
+      # Login ke Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Build dan push image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
