--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Generate version tag
+        id: version
+        run: |
+          VERSION=v1.0.$(date +%s)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: cogan123/hello-devops:latest
+          tags: |
+            cogan123/hello-devops:latest
+            cogan123/hello-devops:${{ env.VERSION }}
+
+      - name: Output version
+        run: echo "✅ Image built and pushed with tag ${{ env.VERSION }}"
